Fix overflow error for todo content, start to add elements to todos

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,38 +43,45 @@ body, html {
     font-weight: 700;
   }
 
-  .mainBody#large{
+  .mainBody {
     display: flex;
+    width: 100%;
     flex: 1;
-    min-height: 100px;
   }
 
+  // .mainBody#large{
+
+  // }
+
   .mainBody#small{
-    display: flex;
     flex-direction: column;
-    min-height: 100px;
+  }
+
+  .mainBody#small.todoContent {
+    justify-content: center;
   }
 
   .newProjectBtn {
     background-color: $secondary-color;
     width: 30px;
     height: 30px;
-    border-radius: 0px;
+  }
+
+  .sidePanel {
+    min-width: 125px;
+    padding: 20px;
+    flex-shrink: 0;
   }
   
   .sidePanel#large {
     background: $secondary-color;
     width: 30%;
-    min-width: 125px;
-    padding: 20px;
     display: flex;
     flex-direction: column;
   }
 
   .sidePanel#small {
     width: 100%;
-    min-width: 125px;
-    padding: 20px;
   }
 
   .sidePanelTitle {
@@ -97,7 +104,6 @@ body, html {
 
   .projectTitle {
     padding: 5px;
-
   }
 
   .projectTitle:hover {
@@ -111,23 +117,57 @@ body, html {
 
   .contentArea {
     width: 100%;
+    height: 100%;
     padding: 50px;
-    display: inline-grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(200px, 200px);
   }
 
+  .todoContent {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 50px;
+  }
+
+  .addBtnContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .addNewTodo {
+    width: 50px;
+    height: 50px;
+  }
+
+
+
   .todo {
-    // width: 200px;
-    //height: 200px;
+    min-width: 300px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
     background-color: $quaternary-color;
     border: 1px solid black;
+    position: relative;
+  }
+
+  .deleteBtn {
+    background-color: $primary-color;
+    width: 60px;
+    height: 30px;
+    position: absolute;
+    bottom: 0;
+    color: white;
+  }
+
+  button {
+    border-radius: 0;
   }
 
   .footer {
     color: $secondary-color;
     background: $tertiary-color;
-    height: $footer-height;
+    min-height: $footer-height;
     display: flex;
     justify-content: center;
     align-items: center;
